--- a/recipes/buffalo-chicken-wings.html
+++ b/recipes/buffalo-chicken-wings.html
@@ -1,4 +1,8 @@
-<h1>Restaurant-Style Buffalo Chicken Wings</h1>
+<head>
+
+<div class="head">
+    <h1 class="head">Restaurant-Style Buffalo Chicken Wings</h1>
+</div>
 <img src="../images/buffalo-chicken-wings.jfif" alt="Buffalo Chicken Wings " style="width: 600px; height: 300px">
 <h2>Buffalo Chicken Wings, <em>Restaurant-Style</em></h2>
 <p>Delicious, restaurant-style, at home recipe that will leave you craving for more! This item isn't just fit for a meal for one, but is best served with friends and family!</p>
@@ -23,3 +27,5 @@
     <li>Heat oil in a deep fryer to 375 degrees F (190 degrees C). The oil should be just enough to cover wings entirely, an inch or so deep. Combine the butter, hot sauce, pepper and garlic powder in a small saucepan over low heat. Stir together and heat until butter is melted and mixture is well blended. Remove from heat and reserve for serving.</li>
     <li>Fry coated wings in hot oil for 10 to 15 minutes, or until parts of wings begin to turn brown. Remove from heat, place wings in serving bowl, add hot sauce mixture and stir together. Serve.</li>
 </ol>
+
+</head>
